--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
-    "react": "^18.2.0",
+    "react": "^17.0.0",
     "react-beautiful-dnd": "^13.1.0",
-    "react-dom": "^18.2.0",
+    "react-dom": "^17.0.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
@@ -16,8 +16,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "preinstall": "npm install --force"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
