--- a/package.json
+++ b/package.json
@@ -4,12 +4,10 @@
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^11.0.0",
-    "@testing-library/user-event": "^11.0.0",
-    "radium": "^0.26.2",
+    "@testing-library/user-event": "^13.5.0",
     "react": "^17.0.0",
     "react-beautiful-dnd": "^13.1.0",
-    "react-dom": "^17.0.0",
+    "react-dom": "^17.0.2",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
@@ -17,8 +15,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "preinstall": "npm install --force"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
